<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    tools:context=".view.MainActivity">

    <FrameLayout
        android:id="@+id/map_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:elevation="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="50dp"
            android:layout_gravity="left|bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/menu_layout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:background="@color/white"
                android:orientation="vertical">
                <CheckBox
                    android:id="@+id/traffic"
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/traffic">
                </CheckBox>

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/hybrid"
                        android:padding="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/hybrid">
                    </RadioButton>

                    <RadioButton
                        android:id="@+id/normal"
                        android:padding="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/normal">
                    </RadioButton>

                    <RadioButton
                        android:id="@+id/satellite"
                        android:padding="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/satellite">
                    </RadioButton>
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/menu_button"
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/purple_500"
                    android:text="@string/menu">
                </androidx.appcompat.widget.AppCompatButton>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/clear_button"
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/purple_500"
                    android:text="@string/clear">
                </androidx.appcompat.widget.AppCompatButton>
            </LinearLayout>

        </LinearLayout>

        <com.google.android.gms.maps.MapView
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            map:uiZoomControls="true"
            map:uiRotateGestures="true"
            map:uiCompass="true" />
    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>