<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_order_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="5dp"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="12dp"
    app:strokeColor="@color/purple_700"
    app:strokeWidth="2dp"
    app:cardElevation="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/marker_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/marker_image"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="left|center"
            android:layout_margin="5dp"
            android:src="@drawable/ic_baseline_location_on_24"
            app:layout_constraintBottom_toBottomOf="@+id/marker_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </ImageView>

        <LinearLayout
            android:id="@+id/marker_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/marker_delete"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/marker_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_weight="8">

            <TextView
                android:id="@+id/marker_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                tools:hint="@string/markers" />

            <TextView
                android:id="@+id/marker_lat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/lat"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/marker_lng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/lng" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/marker_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center"
            android:layout_marginEnd="5dp"
            android:src="@drawable/ic_baseline_delete_24"
            app:layout_constraintBottom_toBottomOf="@+id/marker_info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/marker_info"
            app:layout_constraintTop_toTopOf="parent">
        </ImageButton>

        <TextView
            android:id="@+id/marker_description"
            android:layout_width="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:layout_height="wrap_content"
            android:text="@string/description_empty"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/marker_info"
            android:orientation="horizontal">
        </TextView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>